feat(headless): refuse --resume on writer-lock conflict; SIGKILL crash-resume e2e (it19 S-c)